include join functions for our tables

--- a/views/index.erb
+++ b/views/index.erb
@@ -24,6 +24,8 @@
   <button type='submit' class='btn btn-info'>Add Recipe</button>
 </form>
 
+<h3>Here are all the categories:</h3>
+  
 <% if @categories.any?() %>
 <% @categories.each() do |category| %>
   <ul>
