--- a/views/recipe.erb
+++ b/views/recipe.erb
@@ -1,5 +1,17 @@
 <h1>Recipe:<%=@recipe.title %></h1>
 <h3>Rating:<%=@recipe.rating %></h3>
+<h3>Categories:</h3>
+
+<% if @recipe.categories.any?() %>
+  <% @recipe.categories.each() do |category| %>
+    <ul>
+      <li><a href='/category/<%=category.id %>'><%= category.cat_name() %></a></li>
+    </ul>
+  <%end%>
+  <%else%>
+    <p>You have no categories attached to this recipe!</p>
+  <%end%>
+
 
 <h3>Add Ingredients:</h3>
 
@@ -8,14 +20,16 @@
   <input id='ingredient' name='ingredient' type='text'>
   <button type='submit' class='btn btn-info'>Add Ingredient</button>
 </form>
-<h3>Add Ingredients:</h3>
+
+<h3>Add Instructions:</h3>
 
 <form action='/instruction_add/' method='post'>
   <label for='new_Instruction'>Add Instruction</label>
   <input id='instruction' name='instruction' type='text'>
   <button type='submit' class='btn btn-info'>Add Instruction</button>
-</form><h3>Add Ingredients:</h3>
+</form>
 
+<h3>Add a Category:</h3>
 
 <form action='/recipe_cat_add/' method='post'>
   <input type='hidden' name='recipe_id'  value=<%= @recipe.id %>
